Added functions for lists and rate counting.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 Kwota
               </p>
               <p class="moneyInput">
-                00
+                ??
               </p>
               </div>
               <input class="moneyInput" type="range"  min ="10000" max="100000" step ="1000"/>
@@ -98,12 +98,12 @@
                   Czas trwania
                 </p>
                 <p class="timeInput">
-                  00
+                  ??
                 </p>
               </div>
               <input class="timeInput" type="range"  min ="1" max="10" step ="1"/>
             </form>
-            <h3>Rata<span> 50zł</span></h3>
+            <h3>Rata<span> ?? zł</span></h3>
             <a href="#">Dowiedz się więcej</a>
           </div>
         </div>
@@ -135,10 +135,10 @@
         </div>
       </div>
       <nav class="row">
-        <div class="col-xs-4 col-sm-4">
-          <h2>Klienci indywidualni</h2>
-          <ul>
-            <li>Konta</li>
+        <div class="col-xs-12 col-sm-4">
+          <h2 class="individual">Klienci indywidualni</h2>
+          <ul class="individual">
+            <li>Konta1</li>
             <li>Oszczędności</li>
             <li>Kredyty</li>
             <li>Karty</li>
@@ -148,10 +148,10 @@
             <li>Bankowość elektroniczna</li>
           </ul>
         </div>
-        <div class="col-xs-4 col-sm-4">
-          <h2>Klienci VIP premium</h2>
-          <ul>
-            <li>Konta</li>
+        <div class="col-xs-12 col-sm-4">
+          <h2 class="vip">Klienci VIP premium</h2>
+          <ul class="vip">
+            <li>Konta2</li>
             <li>Oszczędności</li>
             <li>Kredyty</li>
             <li>Karty</li>
@@ -161,10 +161,10 @@
             <li>Bankowość elektroniczna</li>
           </ul>
         </div>
-        <div class="col-xs-4 col-sm-4">
-          <h2>Małe firmy i korporacje</h2>
-          <ul>
-            <li>Konta</li>
+        <div class="col-xs-12 col-sm-4">
+          <h2 class="firm">Małe firmy i korporacje</h2>
+          <ul class="firm">
+            <li>Konta3</li>
             <li>Oszczędności</li>
             <li>Kredyty</li>
             <li>Karty</li>
